IF(CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_CURRENT_BINARY_DIR)
	MESSAGE(FATAL_ERROR": in-soure builds are not allowed!")
ENDIF()

CMAKE_MINIMUM_REQUIRED(VERSION 3.15.0 FATAL_ERROR)

SET(PROJECT_NAME project)
PROJECT(${PROJECT_NAME})
ENABLE_LANGUAGE(Fortran)

ADD_SUBDIRECTORY(src)

ENABLE_TESTING()
INCLUDE(CTest)
ADD_SUBDIRECTORY(test)

FILE(COPY doc DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
